testdata/golden/sema/invalid/max_missing_type.fmt
// scenario: MAX without explicit type arguments must fail inference
fn usage() {
    let m = MAX();
}
